Add input styling and improve buttons

--- a/demo.html
+++ b/demo.html
@@ -9,17 +9,15 @@
     <div class="section is-small">
       <div class="container max-width-tablet">
         <h1 class="title">briefscss</h1>
-        <div style="max-width: 25rem">
-          <p class="paragraph">
-            <b>not minimal:</b> Minimalism is not the goal of briefscss, clear
-            design hierarchy is.
-          </p>
-          <p class="paragraph">
-            <b>not batteries-included:</b> You're most likely going to have to
-            write your own css. briefscss is more meant to enforce a design
-            system than it is to be a component framework.
-          </p>
-        </div>
+        <p class="paragraph">
+          <b>not minimal:</b> Minimalism is not the goal of briefscss, clear
+          design hierarchy is.
+        </p>
+        <p class="paragraph">
+          <b>not batteries-included:</b> You're most likely going to have to
+          write your own css. briefscss is more meant to enforce a design system
+          than it is to be a component framework.
+        </p>
       </div>
     </div>
     <div class="section is-small">
@@ -38,8 +36,8 @@
           while last child elements do not get margin-bottoms.
         </p>
         <p class="paragraph">
-          Elements with class .is-inline do not establish vertical margins and instead
-          establish horizontal margins.
+          Elements with class .is-inline do not establish vertical margins and
+          instead establish horizontal margins.
         </p>
         <h3 class="subtitle">Colors</h3>
         <div class="columns">
@@ -270,7 +268,7 @@
     <div class="section is-small">
       <div class="container max-width-tablet">
         <h2 class="title">Elements</h2>
-        <h2 class="subtitle">Button</h2>
+        <h3 class="subtitle">Button</h3>
         <div>
           <button class="button">Button</button>
           <button class="button b-black f-white">Button</button>
@@ -283,6 +281,15 @@
           <button class="button b-blue f-white">Button</button>
           <button class="button b-purple f-white">Button</button>
           <button class="button is-link">Button</button>
+        </div>
+        <h3 class="subtitle">Input</h3>
+        <div class="field">
+          <label class="label" for="input">Label</label>
+          <input id="input" name="input" placeholder="Placeholder..." />
+        </div>
+        <div class="field">
+          <label class="label" for="input2">Label2</label>
+          <input id="input2" name="input2" placeholder="Placeholder..." />
         </div>
       </div>
     </div>
