Improve styling for button.card-item

--- a/index.html
+++ b/index.html
@@ -329,6 +329,7 @@
 				<div class="card">
 					<div class="card-header">card-header</div>
 					<div class="card-item">card-item</div>
+					<button class="card-item">card-item</button>
 				</div>
 			</div>
 		</div>
